change testimonial section of both gear.html and contact.html

--- a/gear.html
+++ b/gear.html
@@ -131,7 +131,8 @@
             <div>
               <blockquote class="blockquote">
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
+                  I recommend the tac-vest for beginners because it's a nice fit for anyone of any size and is easy
+                  to get use to.
                 </p>
                 <footer class="blockquote-footer">John Doe From
                   <cite title="Company 1">Company 1</cite>
@@ -141,7 +142,8 @@
             <div>
               <blockquote class="blockquote">
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
+                  For beginners it is best to go for a full face mask because people oftne get hit in the face 
+                  and there have been stories of people losing teeth in airsoft.
                 </p>
                 <footer class="blockquote-footer">Sam Smith From
                   <cite title="Company 2">Company 2</cite>
@@ -151,7 +153,8 @@
             <div>
               <blockquote class="blockquote">
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
+                  Always have a good sey of foot wear for airsoft because you never know what the ground might be 
+                  like where ever your going.
                 </p>
                 <footer class="blockquote-footer">Meghan Williams From
                   <cite title="Company 3">Company 3</cite>
