--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="col-md-6 m-auto text-center">
             <h1>Contact Us</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
+            <p>If there is anything that you need an answer for then we will give you all the help you need!</p>
           </div>
         </div>
       </div>
